syntax = "proto3";


enum Color {
    COLOR_UNSPECIFIED = 0;
    COLOR_RED = 1;
    COLOR_GREEN = 2;
    COLOR_BLUE = 3;
}

message EnumMessage {
    Color color = 1;
    repeated Color colors = 2;
    string name = 3;
}
