syntax = "proto3";


message Inner {
    int32 value = 1;
    string label = 2;
}

message Middle {
    Inner inner = 1;
    int32 id = 2;
}

message Outer {
    Middle middle = 1;
    Inner direct_inner = 2;
    string name = 3;
}
